# zlib-py

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY.md  flake.nix  pyproject.toml
.github/workflows/: CI.yml  test.yml
benchmarks/: bench_zlib.py
python/zlib_py/: __init__.py
src/: lib.rs
tests/: test_adler32.py  test_bigmem.py  test_combine.py  test_compress.py  test_compressobj.py  test_crc32.py  test_decompress.py  test_decompressobj.py  test_misc.py  test_parity.py  test_zlibdecompressor.py
